force-app/main/default/objects/NI_License_Audit__c/NI_License_Audit__c.object-meta.xml
<CustomObject>
    <label>NI License Audit</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI License Audits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>