force-app/main/default/objects/NI_License_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>READ ONLY.  The Account field should always display the Account Name that is linked to the selected Deployment Instance (should always be blank for Cluster audits).</description>
    <inlineHelpText>Account or Cluster Management Company is being audited.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NI License Audits</relationshipLabel>
    <relationshipName>License_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>