force-app/main/default/objects/NI_License_Audit__c/fields/Active_Named_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Named_Users__c</fullName>
    <inlineHelpText>Quantity of distinct users that accessed the system during the Audit time frame.</inlineHelpText>
    <label>Active Named Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>