force-app/main/default/objects/NI_License_Audit__c/fields/Audit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Start_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-014431

Audit Date - 30</description>
    <formula>Audit_Date__c  - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Audit Date minus 30 days</inlineHelpText>
    <label>Audit Start Date</label>
    <type>Date</type>
</CustomField>