force-app/main/default/objects/NI_License_Audit__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cluster being audited</description>
    <inlineHelpText>The Cluster being audited</inlineHelpText>
    <label>MPE Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>NI License Audits</relationshipLabel>
    <relationshipName>NI_License_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>