force-app/main/default/objects/NI_License_Audit__c/fields/Contracts_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contracts Manager responsible for this license audit record</description>
    <inlineHelpText>The Contracts Manager responsible for this license audit record. If left blank when the record is created, it will be automatically populated with the member of the default Account Team of the record owner who has the &quot;Contracts - Primary&quot; Role.</inlineHelpText>
    <label>Contracts Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NI_License_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>