force-app/main/default/objects/NI_License_Audit__c/fields/Customer_Approval__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add validation rule requiring that this field be checked before allowing the record to be saved with any status other than &quot;Audit Request&quot;</description>
    <inlineHelpText>Proof of the customer&apos;s approval to conduct the audit has been attached or inserted into a note on this record.</inlineHelpText>
    <label>Customer Approval</label>
    <type>Checkbox</type>
</CustomField>