force-app/main/default/objects/NI_License_Audit__c/fields/Data_Collection_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Collection Case Created</label>
    <type>Checkbox</type>
</CustomField>