force-app/main/default/objects/NI_License_Audit__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>