force-app/main/default/objects/NI_License_Audit__c/fields/Peak_Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>Peak_Usage_Date__c</fullName>
    <description>Relevant to audits using the &quot;Concurrent Usage&quot; methodology.  Represents the specific day (or one of the specific days) that the customer hit their peak license usage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of peak license usage.</inlineHelpText>
    <label>Peak Usage Date</label>
    <type>Date</type>
</CustomField>