force-app/main/default/objects/NI_License_Audit__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <inlineHelpText>Current phase of the audit process</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Customer Approval</fullName>
                <default>true</default>
                <label>Pending Customer Approval</label>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Data Processing</fullName>
            </value>
            <value>
                <fullName>Contract Verification</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>