force-app/main/default/objects/NI_License_Audit__c/validationRules/Account_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Field_Required</fullName>
    <active>true</active>
    <description>Salesforce.com NICC -022951</description>
    <errorConditionFormula>ISBLANK(Account__c )</errorConditionFormula>
    <errorMessage>Account field is required to create Audit record.</errorMessage>
</ValidationRule>