force-app/main/default/objects/NI_License_Audit__c/validationRules/Customer_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Customer_Approval__c = FALSE, 
   NOT( ISPICKVAL(Phase__c, &quot;Pending Customer Approval&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Customer_Approval__c</errorDisplayField>
    <errorMessage>We cannot collect customer data without their written approval.  Please obtain approval from the customer, document the approval in this audit request and then check the Customer Approval checkbox.</errorMessage>
</ValidationRule>