force-app/main/default/objects/NI_License_Audit__c/validationRules/Data_Collection_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Collection_Complete</fullName>
    <active>false</active>
    <description>Use &quot;Case Created&quot; checkbox on Audit record and not allow the user to set Phase = Data Collection if Case exists.  Another option instead of checkbox is: IF Count(Case=1)... if you can do that.</description>
    <errorConditionFormula>AND(  
   ISPICKVAL( Phase__c, &quot;Data Collection&quot; )
)</errorConditionFormula>
    <errorDisplayField>Phase__c</errorDisplayField>
    <errorMessage>A Case has already been created to collect data for this License Audit request, and that Case is now closed.  If you want to request an additional data pull, please change the Phase of this License Audit record to &quot;Closed&quot; and create a new one.</errorMessage>
</ValidationRule>