force-app/main/default/objects/NI_License_Audit__c/validationRules/Single_Audit_Entity.validationRule-meta.xml
<ValidationRule>
    <fullName>Single_Audit_Entity</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   NOT( ISBLANK(Cluster__c) ), 
   NOT( ISBLANK(Asset__c) ) 
)</errorConditionFormula>
    <errorMessage>We can only audit a single entity.  Please select either a Cluster or a Deployment Instance, not both.</errorMessage>
</ValidationRule>