force-app/main/default/objects/NI_License_Audit__c/listViews/My_Audits.listView-meta.xml
<ListView>
    <fullName>My_Audits</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Phase__c</columns>
    <columns>Audit_Date__c</columns>
    <columns>License_Need__c</columns>
    <columns>Licenses_Owned__c</columns>
    <columns>License_Variance__c</columns>
    <columns>License_Exemption__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Audits</label>
    <sharedTo>
        <roleAndSubordinatesInternal>WWSales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>