force-app/main/default/objects/NI_License_Audit__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Phase__c</columns>
    <columns>Cluster__c</columns>
    <columns>Account__c</columns>
    <columns>License_Need__c</columns>
    <columns>Licenses_Owned__c</columns>
    <columns>License_Variance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>notEqual</operation>
        <value>Closed,Pending Customer Approval</value>
    </filters>
    <label>In Progress</label>
</ListView>