force-app/main/default/objects/NI_License_Audit__c/listViews/Recently_Modified.listView-meta.xml
<ListView>
    <fullName>Recently_Modified</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:400</value>
    </filters>
    <label>Recently Modified</label>
</ListView>